--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "trilo",
-  "version": "1.0.0",
-  "description": "trillo appnpm",
-  "main": "index.js",
-  "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "serve",
-    "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\"  -o css/style.concat.prefixed.css css/style.comp.css",
-    "compress:css": "node-sass css/style.concat.prefixed.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.3.4",
-    "concat": "^1.0.3",
-    "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^8.3.1",
-    "serve": "^12.0.0"
-  }
+    "name": "trilo",
+    "version": "1.0.0",
+    "description": "trillo appnpm",
+    "main": "index.js",
+    "scripts": {
+        "watch:sass": "node-sass sass/main.scss css/style.css -w",
+        "serve": "serve",
+        "start": "run-p serve watch:sass",
+        "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+        "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\"  -o css/style.concat.prefixed.css css/style.comp.css",
+        "compress:css": "node-sass css/style.concat.prefixed.css css/style.css --output-style compressed",
+        "build": "run-s compile:sass prefix:css compress:css"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^10.3.4",
+        "concat": "^1.0.3",
+        "node-sass": "^6.0.1",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^8.3.1",
+        "serve": "^12.0.0"
+    }
 }
