--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "trilo",
+    "name": "trillo",
     "version": "1.0.0",
-    "description": "trillo appnpm",
     "main": "index.js",
     "scripts": {
         "watch:sass": "node-sass sass/main.scss css/style.css -w",
@@ -15,11 +14,11 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "autoprefixer": "^10.3.4",
+        "autoprefixer": "^10.4.2",
         "concat": "^1.0.3",
-        "node-sass": "^6.0.1",
+        "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
-        "postcss-cli": "^8.3.1",
-        "serve": "^12.0.0"
+        "postcss-cli": "^9.1.0",
+        "serve": "^13.0.2"
     }
 }
