--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
     "sass": "^1.60.0",
-    "serve": "^14.2.0"
+    "serve": "^14.2.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "on-headers": "^1.1.0",
+      "compression": "^1.7.5"
+    }
   }
 }
